# rs-caip

./: Cargo.toml  LICENSE  README.md
src/: asset_id.rs  asset_name.rs  asset_type.rs  chain.rs  lib.rs
