[package]
name = "caip"
version = "0.1.0"
authors = ["Shane Vitarana <s@publicawesome.com>"]
edition = '2021'
description = "Rust implementation of CAIP standards for blockchain interoperability"
license = "MIT"
keywords = ["blockchain", "ethereum", "cosmos", "caip", "web3"]

[dependencies]
regex = "1.5.4"
